force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/TwilioSF__Twilio_Message_Status__e.object-meta.xml
<CustomObject>
    <description>Used to push message details from twilio to salesforce</description>
    <label>Twilio Message Status</label>
    <pluralLabel>Twilio Message Statuses</pluralLabel>
</CustomObject>