force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__AccountSid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__AccountSid__c</fullName>
    <label>AccountSid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>