force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__ErrorCode__c</fullName>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>