force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__From__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__From__c</fullName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>