force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__MessageSid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__MessageSid__c</fullName>
    <label>MessageSid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>