force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__MessagingServiceSid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__MessagingServiceSid__c</fullName>
    <label>MessagingServiceSid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>