force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__SmsStatus__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__SmsStatus__c</fullName>
    <label>SmsStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>