force-app/main/default/objects/TwilioSF__Twilio_Message_Status__e/fields/TwilioSF__To__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__To__c</fullName>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>